# nats-trading-tests-example

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: tooling-setup.md
helpers/: check.py  debug.py  orders.py  rejection_payloads.py  side_effects.py  wait.py
logger/: config.py
src/: enums.py
src/database/: models.py  pg_client.py
src/messaging/: collector.py  models.py  nats_client.py  subjects.py
src/nts/: collector.py  nats_client.py
src/pg/: pg_client.py
tests/: conftest.py  test_order_contracts.py  test_order_flow.py  test_order_no_side_effects.py  test_order_rejection_order_id.py  test_order_rejection_required_fields.py  test_order_rejection_values.py
tests/contract/: test_order_contracts.py
tests/e2e/: test_order_flow.py
tests/integration/: test_order_no_side_effects.py  test_order_rejection_order_id.py  test_order_rejection_required_fields.py  test_order_rejection_values.py
utils/: debug.py  rejection_payloads.py  side_effects.py
