[project]
name = "nats-trading-tests-example"
version = "0.1.0"
description = "Minimal end-to-end and contract testing example for an event-driven trading system built with microservices, NATS, and PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "nats-py>=2.14.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "structlog>=25.5.0",
]


[tool.ruff]
line-length = 120
target-version = "py312"
